# PropertyScout1

./: .gitignore  .replit  README.md  app.py  property_data.json  pyproject.toml  replit.md
attached_assets/: Pasted--Suggested-Improvements-to-the-Property-Analytics-Dashboard-Based-on-analyzing-the-provided-code-1754513174273_1754513174273.txt  Pasted-Alright-let-s-talk-about-enhancing-your-app-to-pull-in-real-time-market-data-from-APIs-like-Rightmo-1754591643503_1754591643505.txt  Pasted-streamlit-errors-StreamlitDuplicateElementId-There-are-multiple-plotly-chart-elements-with-the-same-1754164313557_1754164313557.txt
pages/: 1_Property_Input.py  2_Financial_Calculator.py  3_Deal_Comparison.py  4_Market_Analysis.py  5_Performance_Tracking.py  6_Live_Property_Search.py
utils/: calculations.py  data_manager.py  property_data_sources.py  scoring.py
